// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/onexstack/onex.
//
syntax = "proto3";

package fakeserver.v1; // 告诉编译器此文件使用什么版本的语法

import "google/api/annotations.proto";
import "fakeserver/v1/order.proto";

option go_package = "github.com/onexstack/onex/pkg/api/fakeserver/v1;v1";

service FakeServer {
  //Order-related APIs
  rpc CreateOrder (v1.CreateOrderRequest) returns (v1.CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }
  rpc UpdateOrder (v1.UpdateOrderRequest) returns (v1.UpdateOrderResponse) {
    option (google.api.http) = {
      put: "/v1/orders/{orderID}"
      body: "*"
    };
  }
  rpc DeleteOrder (v1.DeleteOrderRequest) returns (v1.DeleteOrderResponse) {
    option (google.api.http) = {
      delete: "/v1/orders"
      body: "*"
    };
  }
  rpc GetOrder    (v1.GetOrderRequest   ) returns (v1.GetOrderResponse   ) {
    option (google.api.http) = {
      get: "/v1/orders/{orderID}"
    };
  }
  rpc ListOrder   (v1.ListOrderRequest  ) returns (v1.ListOrderResponse  ) {
    option (google.api.http) = {
      get: "/v1/orders"
    };
  }
}
